general/frontend/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: production
  labels:
    app: frontend
  annotations:
    keel.sh/policy: all
spec:
  replicas: 4
  minReadySeconds: 60
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: davardanian/minesweeper-react:latest
          imagePullPolicy: Always
          # env:
          #   - name: PUBLIC_URL
          #     value: '/production/'
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
