general/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    # acme.cert-manager.io/http01-edit-in-place: 'true'
    # nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - 'minesweepers.games'
      secretName: minesweeper-tls
  rules:
    - host: minesweepers.games
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
